Bug Squashing

--- a/Airbus/assets/css/stylesheet.css
+++ b/Airbus/assets/css/stylesheet.css
@@ -658,6 +658,9 @@ a:hover:after {
   transition: all 0.3s ease-in-out;
 }
 .poster .interaction-mobile{
+  color: white;
+  font-weight: 600;
+  text-transform: uppercase;
   display: none;
 }
 /* INFO */
@@ -1097,7 +1100,9 @@ ul.list li:last-of-type {
     display: none;
   }
   .poster .interaction-mobile{
-    display: inherit;
+    display: block;
+    opacity: 1;
+
   }
 }
 
