--- a/Foodcoma/assets/css/stylesheet.css
+++ b/Foodcoma/assets/css/stylesheet.css
@@ -656,7 +656,11 @@ a:hover:after {
   transition: all 0.3s ease-in-out;
 }
 .poster .interaction-mobile{
+  color: white;
+  font-weight: 600;
+  text-transform: uppercase;
   display: none;
+  
 }
 /* INFO */
 
@@ -1095,7 +1099,8 @@ ul.list li:last-of-type {
     display: none;
   }
   .poster .interaction-mobile{
-    display: inherit;
+    display: block;
+    opacity: 1;
   }
 }
 
